apps/production/guest-services/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: guest-services
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: whoami
